FIX- size on smaller screens

--- a/SearchEngine/css/style.css
+++ b/SearchEngine/css/style.css
@@ -34,7 +34,7 @@ h1{
 
 }
 #searchbar{
-    margin-left:45%;
+    margin-left:40%;
     margin-bottom:2rem;
     margin-top:1rem;
     border-color: #581845;  
@@ -44,7 +44,7 @@ h1{
     color:white;
 }
 #button{
-    margin-left: 50%;
+    margin-left: 48%;
     margin-top: 1rem;
     background-color: #C020C9; 
     
